# z8run

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  release.yml
bins/z8run-cli/: Cargo.toml
bins/z8run-cli/src/: main.rs
bins/z8run-server/: Cargo.toml
bins/z8run-server/src/: main.rs
config/: z8run.example.toml
crates/z8run-api/: Cargo.toml
crates/z8run-api/src/: auth.rs  error.rs  lib.rs  routes.rs  state.rs  ws.rs
crates/z8run-core/: Cargo.toml
crates/z8run-core/src/: engine.rs  error.rs  flow.rs  lib.rs  message.rs  node.rs  scheduler.rs
crates/z8run-core/src/nodes/: ai_agent.rs  classifier.rs  database.rs  debug.rs  delay.rs  embeddings.rs  filter.rs  function.rs  http_in.rs  http_out.rs  http_request.rs  image_gen.rs  json_transform.rs  llm.rs  mod.rs  mqtt.rs  prompt_template.rs  structured_output.rs  summarizer.rs  switch.rs  text_splitter.rs  timer.rs  vector_store.rs  webhook.rs
crates/z8run-protocol/: Cargo.toml
crates/z8run-protocol/src/: codec.rs  frame.rs  lib.rs  message.rs
crates/z8run-runtime/: Cargo.toml
crates/z8run-runtime/src/: executor.rs  lib.rs  manifest.rs  registry.rs  sandbox.rs
crates/z8run-storage/: Cargo.toml
crates/z8run-storage/src/: credential_vault.rs  lib.rs  migration.rs  postgres.rs  repository.rs  sqlite.rs
deploy/: Dockerfile.nginx  nginx.conf  setup-droplet.sh
deploy/landing/: index.html
frontend/: biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: auth.ts  client.ts  flows.ts  vault.ts
frontend/src/app/: App.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/features/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/features/editor/: EditorPage.tsx
frontend/src/features/editor/canvas/: FlowCanvas.tsx
frontend/src/features/editor/nodes/: Z8Node.tsx
frontend/src/features/editor/panels/: ConfigPanel.tsx  ExecutionLog.tsx
frontend/src/features/editor/toolbar/: NodePalette.tsx
frontend/src/features/flows/: FlowListPage.tsx
frontend/src/features/vault/: VaultPage.tsx
frontend/src/hooks/: useEngineSocket.ts
frontend/src/lib/: nodeDefinitions.ts
frontend/src/stores/: authStore.ts  flowListStore.ts  flowStore.ts  uiStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: flow.ts
