[workspace]
resolver = "2"
members = [
    "crates/z8run-core",
    "crates/z8run-protocol",
    "crates/z8run-storage",
    "crates/z8run-runtime",
    "crates/z8run-api",
    "bins/z8run-cli",
    "bins/z8run-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/z8run/z8run"
homepage = "https://z8run.org"
authors = ["z8run <hello@z8run.org>"]
description = "Next Generation Visual Flow Engine"
keywords = ["flow-engine", "automation", "visual-programming", "workflow", "node-editor"]
categories = ["development-tools", "visualization"]

[workspace.dependencies]
# Internal crates
z8run-core = { path = "crates/z8run-core" }
z8run-protocol = { path = "crates/z8run-protocol" }
z8run-storage = { path = "crates/z8run-storage" }
z8run-runtime = { path = "crates/z8run-runtime" }
z8run-api = { path = "crates/z8run-api" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.8", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono", "json"] }

# WASM runtime
wasmtime = "42"

# Authentication
jsonwebtoken = "10"
argon2 = "0.5"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Regex
regex = "1"

# Crypto
aes-gcm = "0.10"
rand = "0.8"

# Identifiers
uuid = { version = "1.21", features = ["v5", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1.0"

# Embed frontend
rust-embed = "8"

# Config
config = "0.15"
dotenvy = "0.15"

# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
