[package]
name = "z8run-cli"
description = "Main CLI for z8run: serve, migrate, plugin install, etc."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "z8run"
path = "src/main.rs"

[dependencies]
z8run-core = { workspace = true }
z8run-api = { workspace = true }
z8run-storage = { workspace = true }
z8run-runtime = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
