[package]
name = "z8run-api"
description = "HTTP/WebSocket server for z8run (Axum)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
z8run-core = { workspace = true }
z8run-protocol = { workspace = true }
z8run-storage = { workspace = true }
z8run-runtime = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
