[package]
name = "z8run-core"
description = "Flow engine, scheduler, executor and data model for z8run"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
rumqttc = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
