[package]
name = "z8run-runtime"
description = "WASM runtime for z8run nodes/plugins (wasmtime)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
z8run-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
